# KINg-chess-engine

./: .dockerignore  .gitignore  CMakeLists.txt  CTestTestfile.cmake  Dockerfile  Makefile  README.md  cmake_install.cmake
src/: attacks.cpp  attacks.hpp  bitboard.cpp  bitboard.hpp  crash.cpp  crash.hpp  datagen.cpp  datagen.hpp  eval.cpp  eval.hpp  main.cpp  movegen.cpp  movegen.hpp  nnue.cpp  nnue.hpp  perft.cpp  perft.hpp  position.cpp  position.hpp  search.cpp  search.hpp  see.cpp  see.hpp  sparams.hpp  syzygy.cpp  syzygy.hpp  timeman.cpp  timeman.hpp  tt.cpp  tt.hpp  tune.cpp  tune.hpp  types.hpp  uci.cpp  uci.hpp  zobrist.cpp  zobrist.hpp
tests/: test_attacks.cpp  test_bitboard.cpp  test_draw.cpp  test_eval.cpp  test_magic.cpp  test_movegen.cpp  test_nnue.cpp  test_perft.cpp  test_position.cpp  test_search.cpp  test_see.cpp  test_syzygy.cpp  test_timeman.cpp  test_tt.cpp  test_types.cpp  test_uci.cpp  test_zobrist.cpp
tools/: ccmatch.sh  embed_net.py  mkbook.awk  run_wac.py  selfplay.ps1  tally.py
tools/baseline/: README.txt
trainer/: README_NNUE.md  arch_suite.out  arch_suite.ps1  build_ob8.sh  build_variant.sh  ccmatch_oh.sh  diag_ebf.sh  diag_vs_tucano.sh  dse_sprt.sh  ext_gauntlet.sh  kb_build_test.sh  kb_check.py  kb_sprt.sh  lichess_pipeline.ps1  lichess_pipeline2.ps1  lichess_pipeline3.ps1  lichess_pipeline4.ps1  lichess_to_text.py  nnue_samples.txt  nodecmp.sh  pgn_results.sh  pgn_score.sh  pgo_build.sh  preprocess_nnue.py  run_kbexp.ps1  s_int8_174m.txt  s_ob8_174m.txt  sf_allsf_test.sh  sf_bignet_sprt.sh  sf_compare.sh  sf_confirm.sh  sf_h1024slow.sh  sf_label.py  sf_label_run.sh  sf_lamtest.sh  sf_net112m.sh  sf_round3.sh  sf_sbuild.sh  sf_scaleup.sh  sf_search_sprt.sh  (+21 more)
